--- a/video.ipynb
+++ b/video.ipynb
@@ -2,9 +2,108 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16598 entries, 0 to 16597\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Rank          16598 non-null  int64  \n",
+      " 1   Name          16598 non-null  object \n",
+      " 2   Platform      16598 non-null  object \n",
+      " 3   Year          16327 non-null  float64\n",
+      " 4   Genre         16598 non-null  object \n",
+      " 5   Publisher     16540 non-null  object \n",
+      " 6   NA_Sales      16598 non-null  float64\n",
+      " 7   EU_Sales      16598 non-null  float64\n",
+      " 8   JP_Sales      16598 non-null  float64\n",
+      " 9   Other_Sales   16598 non-null  float64\n",
+      " 10  Global_Sales  16598 non-null  float64\n",
+      "dtypes: float64(6), int64(1), object(4)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Platform</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Wii Sports</td>\n",
+       "      <td>Wii</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Super Mario Bros.</td>\n",
+       "      <td>NES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Mario Kart Wii</td>\n",
+       "      <td>Wii</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Wii Sports Resort</td>\n",
+       "      <td>Wii</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Pokemon Red/Pokemon Blue</td>\n",
+       "      <td>GB</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rank                      Name Platform\n",
+       "0     1                Wii Sports      Wii\n",
+       "1     2         Super Mario Bros.      NES\n",
+       "2     3            Mario Kart Wii      Wii\n",
+       "3     4         Wii Sports Resort      Wii\n",
+       "4     5  Pokemon Red/Pokemon Blue       GB"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
